# memoryagent

./: .gitignore  README.md  pyproject.toml
configs/: m3_nq.yaml  m3_proto.yaml  rtx4090.yaml  smoke.yaml
scripts/: encode_corpus.py  eval_baseline_qwen.py  eval_baseline_rag.py  smoke.py  train.py
src/memoryagent/: __init__.py  config.py  device.py  prompts.py  seed.py
src/memoryagent/data/: collate.py  loaders.py  nq.py  toy.py
src/memoryagent/eval/: qa_metrics.py  retrieval_metrics.py
src/memoryagent/models/: encoder.py  generator.py  projection.py
src/memoryagent/ppo/: reference.py  reward.py  sampler.py
src/memoryagent/retrieval/: index.py  refresh.py
src/memoryagent/training/: checkpoint.py  loop.py  losses.py  muon.py  optim.py  replug.py
tests/: conftest.py  test_index.py  test_mixture_nll.py  test_muon.py  test_replug_step.py
